[package]
name = "drawille-nostd"
version = "0.1.0"
edition = "2021"
description = "A no_std version of the drawille crate."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = { version = "1.0.7", default-features = false }
num-traits = { version = "0.2.16", default-features = false, features = ["libm"] }
