[package]
name = "drawille-nostd"
version = "0.1.1"
authors = ["Demchuk Nazar"]
edition = "2021"
description = "A no_std version of the drawille crate."
license = "MIT"
repository = "https://github.com/uandere/drawille-nostd"
homepage = "https://github.com/uandere/drawille-nostd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.16", default-features = false, features = ["libm"] }
